--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -42,11 +42,11 @@
 					<li class="active"><a href="#">Link</a></li>
 					<li><a href="#">Link</a></li>
 				</ul>
-				<form class="navbar-form navbar-left" role="search">
+				<form id="formsearch" class="navbar-form navbar-left" role="search" method="GET">
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Search">
+						<input id="search" type="text" class="form-control" placeholder="Search" value="">
 					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
+					<button id="btnSearch" type="submit" class="btn btn-default">Search</button>
 				</form>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">Đăng Ký</a></li>
@@ -103,6 +103,9 @@
 							<div class="col-sm-12 col-md-12">
 								<button id="btnMore" type="button" class="btn btn-large btn-block btn-success">
 									<h4>Load more...</h4>
+								</button>
+								<button id="btnMore2" type="button" class="btn btn-large btn-block btn-success">
+									<h4>Tải Thêm...</h4>
 								</button>
 							</div>
 						</div>
