--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -50,13 +50,12 @@
 				</form>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="register.html">Đăng Ký</a></li>
+					<li><a href="login.html">Đăng Nhập</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Sắp Xếp <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li><a href="#">Separated link</a></li>
+							<li><a id="gia" href="#">Giá Tăng Dần ↑</a></li>
+							<li><a id="thoigian" href="#">Thời Gian Giảm Dần ↓</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -91,7 +90,7 @@
 			<div class="col-sm-9 col-md-9">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<h3 class="panel-title">Products</h3>
+						<h3 class="panel-title">Sản Phẩm</h3>
 					</div>
 					<div class="panel-body">
 						<div class="row" id="product-list">
@@ -102,9 +101,18 @@
 							<br>
 							<div class="col-sm-12 col-md-12">
 								<button id="btnMore" type="button" class="btn btn-large btn-block btn-success">
-									<h4>Load more...</h4>
+									<h4>Tải Thêm...</h4>
 								</button>
 								<button id="btnMore2" type="button" class="btn btn-large btn-block btn-success">
+									<h4>Tải Thêm...</h4>
+								</button>
+								<button id="btnMore3" type="button" class="btn btn-large btn-block btn-success">
+									<h4>Tải Thêm...</h4>
+								</button>
+								<button id="btnMore4" type="button" class="btn btn-large btn-block btn-success">
+									<h4>Tải Thêm...</h4>
+								</button>
+								<button id="btnMore5" type="button" class="btn btn-large btn-block btn-success">
 									<h4>Tải Thêm...</h4>
 								</button>
 							</div>
@@ -119,19 +127,26 @@
 		{{#each this}}
 		<div class="col-sm-4 col-md-4" style="display: none">
 			<div class="thumbnail">
+				<span class="label label-info">Số Lượt Đấu Giá: {{soluotragia}}</span>
+				<span class="label label-info">Thời Gian Kết Thúc: {{Thoigianketthuc}}</span>
 				<img src="imgs/{{ID}}/main_thumbs.jpg" alt="{{Ten}}" title="{{Ten}}">
 				<div class="caption">
 					<h4>{{Ten}}</h4>
-					<h3>{{formatNumber Giahientai}}</h3>
+					<h4>Giá Hiện Tại: {{formatNumber Giahientai}}</h4>
+					<h4>Giá Bán Ngay: {{formatNumber Giabanngay}}</h4>
 					<p style="height: 36px;">{{Mota}}</p>
 					<p>
-						<a href="javascript:;" class="btn btn-primary">
+						<a id="thongtin" href="javascript:thongtin({{ID}});" class="btn btn-primary">
 							<span class="glyphicon glyphicon-eye-open"></span>
 							Details
 						</a>
-						<a href="javascript:;" class="btn btn-danger">
+						<a id="mua" href="javascript:muahang();" class="btn btn-danger">
 							<span class="glyphicon glyphicon-shopping-cart"></span>
-							Add
+							Mua
+						</a>
+						<a id="daugia" href="javascript:daugia();" class="btn btn-warning">
+							<span class="glyphicon glyphicon-usd"></span>
+							Đấu Giá
 						</a>
 					</p>
 				</div>
@@ -146,5 +161,9 @@
 	<script src="assets/handlebars-intl-1.1.2/handlebars-intl.min.js"></script>
 	<script src="assets/me/index.js"></script>
 	<script src="assets/me/home.js"></script>
+	<script src="assets/me/sapxep.js"></script>
+	<script src="assets/me/thongtin.js"></script>
+	<script src="assets/me/muahang.js"></script>
+	<script src="assets/me/daugia.js"></script>
 </body>
 </html>
