--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -63,7 +63,7 @@
 		</div>
 	</nav>
 
-	<div class="container-fluid">
+	<div id="BODYweb" class="container-fluid">
 		<div class="row">
 			<div class="col-sm-3 col-md-3">
 				<div class="panel panel-default">
