Sửa lỗi giao diện, khi đăng nhập, đăng ký k còn load link

--- a/DoAnWeb2/client_src/login.html
+++ b/DoAnWeb2/client_src/login.html
@@ -39,6 +39,7 @@
                 <span class="glyphicon glyphicon-plus"></span>
                 Đăng Nhập
               </button>
+              <h5>bạn chưa có tài khoản? <a id="dangkyngay" href="#">đăng ký ngay!</a></h5>
             </div>
           </div>
         </form>
@@ -51,6 +52,8 @@
   <script src="assets/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
   <script src="assets/jquery-validation-1.12.0/jquery.validate.min.js"></script>
   <script src="assets/me/login.js"></script>
+  <script src="assets/me/chuyenPage.js"></script>
+  
 </body>
 
 </html>
