--- a/DoAnWeb2/client_src/register.html
+++ b/DoAnWeb2/client_src/register.html
@@ -1,47 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Register</title>
+  <title>Đăng Nhập</title>
   <link rel="stylesheet" href="assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap-datepicker/css/bootstrap-datepicker3.min.css">
-  <script>
-function includeHTML() {
-  var z, i, elmnt, file, xhttp;
-  /*loop through a collection of all HTML elements:*/
-  z = document.getElementsByTagName("*");
-  for (i = 0; i < z.length; i++) {
-    elmnt = z[i];
-    /*search for elements with a certain atrribute:*/
-    file = elmnt.getAttribute("w3-include-html");
-    if (file) {
-      /*make an HTTP request using the attribute value as the file name:*/
-      xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function() {
-        if (this.readyState == 4) {
-          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-          /*remove the attribute, and call this function once more:*/
-          elmnt.removeAttribute("w3-include-html");
-          includeHTML();
-        }
-      }      
-      xhttp.open("GET", file, true);
-      xhttp.send();
-      /*exit the function:*/
-      return;
-    }
-  }
-};
-</script>
 </head>
-
 <body>
-  <div w3-include-html="header.html"></div>
-  
   <br>
   <br>
   <div class="container">
@@ -90,20 +57,20 @@ function includeHTML() {
                 <span class="glyphicon glyphicon-plus"></span>
                 Register
               </button>
+              <h5>bạn đã có có tài khoản? <a id="dangnhapngay" href="#">đăng nhập ngay!</a></h5>
             </div>
           </div>
         </form>
       </div>
     </div>
   </div>
-<script>
-includeHTML();
-</script>
+
   <script src="assets/jquery-3.1.1.min.js"></script>
   <script src="assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
   <script src="assets/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
   <script src="assets/jquery-validation-1.12.0/jquery.validate.min.js"></script>
   <script src="assets/me/register.js"></script>
+  <script src="assets/me/chuyenPage.js"></script>
 </body>
 
 </html>
