--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -5,27 +5,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <style>
     body {font-family: "Lato", sans-serif;}
     .mySlides {display: none}
 </style>
 <body>
-    <div class="w3-center" style="width:1600px;margin:0 auto;">
+    <div class="w3-center">
         <!-- Navbar -->
-        <div class="w3-col">
+        <div id="header" class="w3-col">
             <div class="w3-row w3-bar w3-black" style="width:100%">
                 <a class="w3-bar-item w3-black w3-button w3-right" href="#" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
                 <a id="home" href="#" class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
+                <a id="backhome" href="#" class="w3-black w3-button w3-small w3-left fa">Quay Về Trang Chủ</a>
 
-
-                <a href="register.html" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng kí</a>
-                <a href="login.html" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng nhập</a>
+                <a id="dangky" href="#" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng ký</a>
+                <a id="dangnhap" href="#" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng nhập</a>
                 <a href="#" class="w3-button w3-black w3-right fa fa-user w3-small"> Khách</a>
 
             </div>
         </div>
-
+        <div id="trangchu">
         <!-- The Main Section -->
         <div class="w3-container w3-white w3-content w3-center w3-padding-12" style="max-width:2000px">
             <h2 class="w3-wide" style="margin-top:40px">Ferocious-mark
@@ -41,13 +46,11 @@
         <!-- Navbar 2 -->
         <div class="w3-col m9 l9 w3-right">
             <div class="w3-row" style="margin:4px">
-                <div class="w3-col m1 l1 w3-text-white">
-                    <a>Ferocius</a>
-                </div>
+                
                 <!-- Search -->
                 <form id="formsearch" role="search" method = "GET">
                     <div class="w3-col m7 l7 w3-left w3-border">
-                        <input id="search" class="w3-input w3-right w3-border w3-small" type="text" placeholder="Thử tìm với Tên, Giá, Loại hay Nhà sản xuất">
+                        <input id="search" class="w3-input w3-right w3-border w3-small" type="text" placeholder="Thử tìm với Tên, Loại sản phẩm.">
                     </div>
                     <button id="btnSearch" type="submit" class="w3-padding w3-button w3-indigo w3-hover-red w3-left"><i class="fa fa-search"></i>
                     </button>
@@ -77,14 +80,11 @@
 
         <!-- Navbar 2 -->
         <div class="w3-row w3-margin-top" >
-            <div class="w3-col l3 m3">
-
-            </div>
-            <div class="w3-col l9 m9 w3-right w3-border w3-round" style="margin-left:20px">
+            <div class="w3-col m1 l12" style="margin-right:20px">
                 <!-- Page content -->
 
                 <div class="w3-col w3-small w3-light-grey w3-border">
-                    <h5 class="w3-left" style="margin:5px"><b>Sản phẩm</b></h5>
+                    <h5 class="w3-center" style="margin:5px"><b>Sản phẩm</b></h5>
                 </div>
                 <!-- San pham -->
                 <div class="w3-row " style="margin-left:20px"  >
@@ -119,13 +119,14 @@
                 </div>
             </div>
         </div>
+        </div>
     </div>
 
     <!-- End Page Content -->
 
     <!-- Footer -->
 
-    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+    <footer id="footer" class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
       <i class="fa fa-facebook-official w3-hover-opacity" href="https://www.facebook.com/Ferocious-142892683087547" target="_blank">
       </i>
       <i class="fa fa-instagram w3-hover-opacity">
@@ -154,7 +155,7 @@
 <script src="assets/me/thongtin.js"></script>
 <script src="assets/me/muahang.js"></script>
 <script src="assets/me/daugia.js"></script>
-
+<script src="assets/me/chuyenPage.js"></script>
 
 
 
@@ -172,47 +173,34 @@
 
 <script id="product-template" type="text/x-handlebars-template">
     {{#each this}}
-    <div id="thesp" class="w3-border w3-margin-right w3-margin-top myCard" style="display: none" >
-        <div class="w3-container">
-            <span class="label label-info">Số Lượt Đấu Giá: {{soluotragia}}
-            </span><br>
-            <span class="label label-info">Thời Gian Kết Thúc: {{Thoigianketthuc}}
-            </span>
-        </div>
-        <img src="imgs/{{ID}}/main_thumbs.jpg" alt="{{Ten}}" title="{{Ten}}" class="w3-text w3-margin-top" width="90px" height="80px">
-
-        <div class="w3-container" style="width:auto; height:150">
-            <h6 style="height:90">{{Ten}}</h6>
-            <div class="w3-button w3-white">
-                <h6>Giá Hiện Tại: {{formatNumber Giahientai}}</h6>
-
-                <h6>Giá Bán Ngay: {{formatNumber Giabanngay}}</h6>
-            </div>
-            <p style="height: 36px;">{{Mota}}</p>
-            <div class="w3-row w3-margin-bottom ">
-                <div class="w3-blue w3-col m4 l4 w3-left w3-hover-yellow">
-                    <a id="thongtin" href="javascript:thongtin({{ID}});" class="w3-small w3-button w3-hover-yellow">
-                        <span class="glyphicon glyphicon-eye-open">  </span>
-                        Details
-                    </a>
-                </div>
-                <div class="w3-red w3-col m4 l4 w3-hover-purple">
-                    <a id="mua" href="javascript:muahang({{ID}});" class="w3-small w3-button w3-hover-purple">
-                        <span class="glyphicon glyphicon-shopping-cart"></span>
-                        Mua
-                    </a>
-                </div>
-                <div class="w3-yellow w3-col m4 l4 w3-right w3-hover-blue">
-                    <a id="daugia" href="javascript:daugia({{ID}});" class="w3-small w3-button w3-hover-blue">
-                        <span class="glyphicon glyphicon-usd"></span>
-                        Đấu Giá
-                    </a>
+        <div class="col-sm-4 col-md-4" style="display: none">
+            <div class="thumbnail">
+                <span class="label label-info">Số Lượt Đấu Giá: {{soluotragia}}</span>
+                <span class="label label-info">Thời Gian Kết Thúc: {{Thoigianketthuc}}</span>
+                <img src="imgs/{{ID}}/main_thumbs.jpg" alt="{{Ten}}" title="{{Ten}}">
+                <div class="caption">
+                    <h4>{{Ten}}</h4>
+                    <h4>Giá Hiện Tại: {{formatNumber Giahientai}}</h4>
+                    <h4>Giá Bán Ngay: {{formatNumber Giabanngay}}</h4>
+                    <p style="height: 36px;">{{Mota}}</p>
+                    <p>
+                        <a id="thongtin" href="javascript:thongtin({{ID}});" class="btn btn-primary">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                            Details
+                        </a>
+                        <a id="mua" href="javascript:muahang({{ID}});" class="btn btn-danger">
+                            <span class="glyphicon glyphicon-shopping-cart"></span>
+                            Mua
+                        </a>
+                        <a id="daugia" href="javascript:daugia({{ID}});" class="btn btn-warning">
+                            <span class="glyphicon glyphicon-usd"></span>
+                            Đấu Giá
+                        </a>
+                    </p>
                 </div>
             </div>
         </div>
-    </div>
-
-    {{/each}}
+        {{/each}}
 </script>
 
 <script id="thongtinsp" type="text/x-handlebars-template">
