--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -17,15 +17,15 @@
             <div class="w3-row w3-bar w3-black" style="width:100%">
                 <a class="w3-bar-item w3-black w3-button w3-right" href="#" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
                 <a id="home" href="#" class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
+                <a id="backhome" href="#" class="w3-black w3-button w3-small w3-left fa">Quay Về Trang Chủ</a>
 
-
-                <a href="register.html" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng kí</a>
-                <a href="login.html" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng nhập</a>
+                <a id="dangnhap" href="#" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng kí</a>
+                <a id="dangky" href="#" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng nhập</a>
                 <a href="#" class="w3-button w3-black w3-right fa fa-user w3-small"> Khách</a>
 
             </div>
         </div>
-
+        <div id="trangchu">
         <!-- The Main Section -->
         <div class="w3-container w3-white w3-content w3-center w3-padding-12" style="max-width:2000px">
             <h2 class="w3-wide" style="margin-top:40px">Ferocious-mark
@@ -127,6 +127,7 @@
                 </div>
             </div>
         </div>
+        </div>
     </div>
 
     <!-- End Page Content -->
@@ -163,6 +164,7 @@
 <script src="assets/me/thongtin.js"></script>
 <script src="assets/me/muahang.js"></script>
 <script src="assets/me/daugia.js"></script>
+<script src="assets/me/chuyenPage.js"></script>
 
 
 
