--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -83,8 +83,8 @@
                 <div class="w3-col w3-tiny w3-light-grey w3-border">
                     <h6 class="w3-left" style="margin:5px"><b>Danh mục</b></h6>
                 </div>
-                <div id="danhmuc_list" class="w3-col w3-tiny w3-light-grey w3-border">
-                    
+                <div id="danhmuc-list" class="w3-col w3-tiny w3-light-grey w3-border">
+
                 </div>
 
             </div>
@@ -182,6 +182,15 @@
 
 
 
+
+
+<script id="loadCategory" type="text/x-handlebars-template">
+    {{#each this}}
+    <div id="danhmuc_list" class="w3-col w3-tiny w3-light-grey w3-border">
+        <h6 class="w3-left" style="margin:5px">{{Phanloai}}</h6>
+    </div>
+    {{/each}}
+</script>
 
 <script id="product-template" type="text/x-handlebars-template">
     {{#each this}}
