fix xong đăng nhập và đăng kí và token

--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -16,11 +16,12 @@
         <div class="w3-col">
             <div class="w3-row w3-bar w3-black" style="width:100%">
                 <a class="w3-bar-item w3-black w3-button w3-right" href="#" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-                <a id="home" href="#" class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
-                <a id="backhome" href="#" class="w3-black w3-button w3-small w3-left fa">Quay Về Trang Chủ</a>
+                <a id="home"  class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
+                <a id="backhome"  class="w3-black w3-button w3-small w3-left fa">Quay Về Trang Chủ</a>
 
-                <a id="dangnhap" href="#" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng kí</a>
-                <a id="dangky" href="#" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng nhập</a>
+                <a id="dangky"  class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng kí</a>
+                <a id="dangnhap"  class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng nhập</a>
+                <a id="thoat" class="w3-black w3-button w3-right fa fa-sign-out"> Thoát</a>
                 <a href="#" class="w3-button w3-black w3-right fa fa-user w3-small"> Khách</a>
 
             </div>
