--- a/DoAnWeb2/client_src/register.html
+++ b/DoAnWeb2/client_src/register.html
@@ -30,37 +30,37 @@
           <div class="form-group">
             <label for="txtName" class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="FullName" id="txtName" placeholder="Steve">
+              <input type="text" class="form-control"  id="txtName" placeholder="Steve">
             </div>
           </div>          
           <div class="form-group">
             <label for="txtEmail" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="Email" id="txtEmail" placeholder="steve.jobs@apple.com">
+              <input type="text" class="form-control"  id="txtEmail" placeholder="steve.jobs@apple.com">
             </div>
           </div>
           <div class="form-group">
             <label for="txtPassword" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-              <input type="password" class="form-control" name="PWD" id="txtPassword" placeholder="Password">
+              <input type="password" class="form-control"  id="txtPassword" placeholder="Password">
             </div>
           </div>
           <div class="form-group">
               <label for="txtConfirmPWD" class="col-sm-2 control-label">Confirm Password</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control" name="ConfirmPWD" id="txtConfirmPWD" placeholder="Password">
+                <input type="password" class="form-control"  id="txtConfirmPWD" placeholder="Password">
               </div>
             </div>
           <div class="form-group">
             <label for="txtPhone" class="col-sm-2 control-label">Phone Number</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="Phone" id="txtPhone" placeholder="09099999999">
+              <input type="text" class="form-control"  id="txtPhone" placeholder="09099999999">
             </div>
           </div> 
           <div class="form-group">
             <label for="txtaddress" class="col-sm-2 control-label">Address</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="address" id="txtaddress" placeholder="127 Nguyễn Văn Cừ">
+              <input type="text" class="form-control"  id="txtaddress" placeholder="127 Nguyễn Văn Cừ">
             </div>
           </div>      
           <div  class="form-group">
