--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -6,8 +6,6 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="assets/mycss/mycss.css" />
-
-
 <style>
     body {font-family: "Lato", sans-serif;}
     .mySlides {display: none}
@@ -21,10 +19,11 @@
                 <a id="home"  class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
                 <a id="backhome"  class="w3-black w3-button w3-small w3-left fa">Quay Về Trang Chủ</a>
 
+                <a id="list1"  class="w3-black w3-button w3-right fa fa-user w3-small"></a>
                 <a id="dangky"  class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng kí</a>
                 <button id="dangnhap" onclick="document.getElementById('login-pop').style.display='block'" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng nhập</button>
                 <a id="thoat" class="w3-black w3-button w3-right fa fa-sign-out"> Thoát</a>
-                <a href="#" class="w3-button w3-black w3-right fa fa-user w3-small"> Khách</a>
+                <a id="khach" href="#" class="w3-button w3-black w3-right fa fa-user w3-small"> Khách</a>
 
             </div>
         </div>
@@ -90,14 +89,14 @@
                 </div>
                 <form class=" w3-white" style="margin: 20px">
                     
-                    <div class=" w3-text-teal w3-left" for="uname"><b>Username</b></div><br>
-                    <input class="w3-input w3-animate-input" style="width:135px" type="text" placeholder="Enter Username" name="uname" required><br>
+                    <div class=" w3-text-teal w3-left" for="uname"><b>Email</b></div><br>
+                    <input class="w3-input w3-animate-input" style="width:135px" type="text" id="txtEmail" placeholder="Enter Email"  required><br>
                 
                     <div class=" w3-text-teal w3-left" for="psw"><b>Password</b></div><br>
-                    <input class=" w3-input w3-animate-input" style="width:135px" type="password" placeholder="Enter Password" name="psw" required>
+                    <input class=" w3-input w3-animate-input" style="width:135px" type="password" id="txtPassword" placeholder="Enter Password"  required>
                     <br>
 
-                    <button class="w3-row w3-btn w3-teal w3-margin-top w3-margin-bottom"  type="submit">Login</button>
+                    <button id = "btnlogin" class="w3-row w3-btn w3-teal w3-margin-top w3-margin-bottom"  type="submit">Login</button>
 
 
                     <button class="w3-row w3-btn w3-red w3-margin" type="button" onclick="document.getElementById('login-pop').style.display='none'">Cancel</button>
@@ -201,7 +200,7 @@
 <script src="assets/me/muahang.js"></script>
 <script src="assets/me/daugia.js"></script>
 <script src="assets/me/chuyenPage.js"></script>
-
+<script src="assets/me/login.js"></script>
 
 
 
