--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -18,11 +18,10 @@
                 <a class="w3-bar-item w3-black w3-button w3-right" href="#" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
                 <a id="home"  class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
                 <a id="backhome"  class="w3-black w3-button w3-small w3-left fa">Quay Về Trang Chủ</a>
-
+                <a id="thoat" class="w3-black w3-button w3-right fa fa-sign-out"> Thoát</a>
                 <a id="list1"  class="w3-black w3-button w3-right fa fa-user w3-small"></a>
                 <a id="dangky"  class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng kí</a>
                 <button id="dangnhap" onclick="document.getElementById('login-pop').style.display='block'" class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng nhập</button>
-                <a id="thoat" class="w3-black w3-button w3-right fa fa-sign-out"> Thoát</a>
                 <a id="khach" href="#" class="w3-button w3-black w3-right fa fa-user w3-small"> Khách</a>
 
             </div>
@@ -207,9 +206,6 @@
 
 
 
-
-
-
 <script id="loadCategory" type="text/x-handlebars-template">
     {{#each this}}
     <div id="danhmuc_list" class="w3-col w3-tiny w3-light-grey w3-border">
@@ -220,12 +216,12 @@
 
 <script id="product-template" type="text/x-handlebars-template">
     {{#each this}}
-    <div id="thesp" class="w3-card w3-border w3-margin-right w3-margin-top myCard" style="display: none" >
+    <div  id="thesp" class="w3-card w3-border w3-margin-right w3-margin-top myCard" style="display: none" >
         <div class="w3-container">
-            <span class="label label-info">Số Lượt Đấu Giá: {{soluotragia}}
-            </span><br>
-            <span class="label label-info">Thời Gian Kết Thúc: {{Thoigianketthuc}}
-            </span>
+            <span class="label label-info">Số Lượt Đấu Giá: {{soluotragia}} </span>
+            <br>
+            <span class="label label-info">Thời Gian Kết Thúc:</span><div id="{{ID}}"></div>
+            
         </div>
         <img src="imgs/{{ID}}/main_thumbs.jpg" alt="{{Ten}}" title="{{Ten}}" class="w3-text w3-margin-top" width="90px" height="80px">
 
@@ -259,8 +255,6 @@
             </div>
         </div>
     </div>
-
-    {{/each}}
 </script>
 
 <script id="thongtinsp" type="text/x-handlebars-template">
