--- a/DoAnWeb2/client_src/admin.html
+++ b/DoAnWeb2/client_src/admin.html
@@ -87,7 +87,7 @@
 <script src="assets/handlebars.min-v4.0.11.js"></script>
 <script src="assets/handlebars-intl-1.1.2/handlebars-intl.min.js"></script>
 <script src="assets/me/admin.js"></script>
-<script src="assets/me/delete.js"></script>
+<script src="assets/me/delete-update-user.js"></script>
 
 
 <script id="chucnang-temp" type="text/x-handlebars-template">
@@ -129,6 +129,21 @@
         </tr>
       </thead>
       <tbody id="listdel"></tbody>
+    </table>
+</script>
+
+<script id="noidung-temp-updateuser" type="text/x-handlebars-template">
+    <table border="1" width="1100px">
+      <thead>
+        <tr>
+          <td width="180px"><center>Email</center></td>
+          <td width="200px"><center>Họ Tên</center></td>
+          <td width="200px"><center>Mật Khẩu Cũ</center></td>
+          <td width="200px"><center>Mật Khẩu Mới</center></td>
+          <td width="180px"><center>Xác Nhận</center></td>
+        </tr>
+      </thead>
+      <tbody id="listupdate"></tbody>
     </table>
 </script>
 
