xong phần yêu thích và đấu giá !

--- a/DoAnWeb2/client_src/register.html
+++ b/DoAnWeb2/client_src/register.html
@@ -8,11 +8,25 @@
   <title>Register</title>
   <link rel="stylesheet" href="assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap-datepicker/css/bootstrap-datepicker3.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="assets/mycss/mycss.css" />
   <script src='https://www.google.com/recaptcha/api.js'></script>
+  <style>
+    body {font-family: "Lato", sans-serif;}
+    .mySlides {display: none}
+</style>
 </head>
 
 <body>
-
+  <div class="w3-center" style="width:1200px;margin:0 auto;">
+        <div class="w3-col">
+            <div class="w3-row w3-bar w3-black" style="width:100%">
+                <a class="w3-bar-item w3-black w3-button w3-right" href="#" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+                <a href="http://localhost:8080"  class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
+                <a href="/register.html" href="/register.html"  class="w3-black w3-button w3-right fa fa-key w3-small"> Đăng kí</a>
+            </div>
+        </div>
   
   <br>
   <br>
@@ -80,6 +94,22 @@
       </div>
     </div>
   </div>
+</div>
+      <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+      <i class="fa fa-facebook-official w3-hover-opacity" href="https://www.facebook.com/Ferocious-142892683087547" target="_blank">
+      </i>
+      <i class="fa fa-instagram w3-hover-opacity">
+      </i>
+      <i class="fa fa-snapchat w3-hover-opacity">  
+      </i>
+      <i class="fa fa-pinterest-p w3-hover-opacity">
+      </i>
+      <i class="fa fa-twitter w3-hover-opacity">
+      </i>
+      <i class="fa fa-linkedin w3-hover-opacity">
+      </i>
+      <p class="w3-medium">Powered by <a href="https://www.facebook.com/Ferocious-142892683087547" target="_blank">Ferocious</a></p>
+  </footer>
   <script src="assets/jquery-3.1.1.min.js"></script>
   <script src="assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
   <script src="assets/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
