--- a/DoAnWeb2/client_src/user.html
+++ b/DoAnWeb2/client_src/user.html
@@ -62,13 +62,13 @@
                 </form>
             </div>
         </div>
+        </div>
         
-       
 
     <!-- End Page Content -->
         <div class="w3-row w3-margin-top" >
             <!-- Page content -->
-             <div align="center">
+            <div align="center">
         <h5 id="nguoidung"></h5>
         </div>
             <div id="tagbar-danhmuc" class="w3-col w3-left w3-boder w3-round" style="margin-right:20px;width:21%">
