--- a/DoAnWeb2/client_src/user.html
+++ b/DoAnWeb2/client_src/user.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap-datepicker/css/bootstrap-datepicker3.min.css">
 <link rel="stylesheet" href="assets/mycss/mycss.css" />
 <style>
     body {font-family: "Lato", sans-serif;}
@@ -18,14 +20,14 @@
                 <div class="w3-col">
             <div class="w3-row w3-bar w3-black" style="width:100%">
 
-                <a id="home" href="http://localhost:8080"  class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
+     <a id="home" href="http://localhost:8080"  class="w3-black w3-button w3-small w3-left fa">Trang Chủ</a>
+     <a id="back" href="/user.html"  class="w3-black w3-button w3-small w3-left fa">Quay về</a>
     <div class="w3-dropdown-hover w3-right">
     <button onclick="myFunction()" href="/user.html" class="w3-button w3-black"><h7 id="list1"></h7></button>
     <div class="w3-dropdown-content w3-bar-block w3-border">
       <a id="upsanpham" class="w3-bar-item w3-button">Đăng Bán Sản Phẩm</a>
       <a id="xinban" onclick="document.getElementById('banhang-pop').style.display='block'" class="w3-bar-item w3-button">Xin Bán Sản Phảm</a>
-      <a  class="w3-bar-item w3-button">Quản Lý Tài Khoản</a>
-      <a id="qlSanPham"  class="w3-bar-item w3-button">Quản Lý Sản Phẩm</a>
+      <a id="qltk"  class="w3-bar-item w3-button">Quản Lý Tài Khoản</a>
       <a id="thoat" class="w3-bar-item w3-button"> Thoát</a>
     </div>
   </div>
@@ -33,6 +35,7 @@
             </div>
         </div>
     </div>
+        <div id="qltknd"></div>
         <div id="trangchu">
         <!-- The Main Section -->
         <div id="MainSection" class="w3-container w3-white w3-content w3-center w3-padding-12" style="max-width:2000px">
@@ -62,9 +65,6 @@
                 </form>
             </div>
         </div>
-        </div>
-        
-
     <!-- End Page Content -->
         <div class="w3-row w3-margin-top" >
             <!-- Page content -->
@@ -72,16 +72,6 @@
         <h5 id="nguoidung"></h5>
         </div>
             <div id="tagbar-danhmuc" class="w3-col w3-left w3-boder w3-round" style="margin-right:20px;width:21%">
-                <div class="w3-col w3-tiny w3-light-grey w3-border">
-                    <h6 class="w3-left" style="margin:5px"><b>Danh mục</b></h6>
-                </div>
-                <div id="danhmuc-list" class="w3-col w3-tiny w3-light-grey w3-border">
-
-                </div>
-
-            </div>
-
-            <div id="tagbar-danhmuc2" class="w3-col w3-left w3-boder w3-round" style="margin-right:20px;width:21%">
                 <div class="w3-col w3-tiny w3-light-grey w3-border">
                     <h6 class="w3-left" style="margin:5px"><b>Quản Lý Sản Phẩm</b></h6>
                 </div>
@@ -109,7 +99,6 @@
                 </div>
             </div>
         </div>
-    </div>
           <div id="banhang-pop" class=" modal">
             <!-- Modal Content -->
             
@@ -329,4 +318,91 @@
       </thead>
       <tbody id="listDamua"></tbody>
     </table>
+</script>
+<script id="thongtinnguoidung" type="text/x-handlebars-template">
+<div class="container">
+    <div class="row">
+
+      <div class="col-sm-12 col-md-12">
+        <form  ">
+          <div align="center">
+              <h1>Đổi mật khẩu</h1>
+            </div>
+            <br/>
+            <br/>
+            <br/> 
+             <div class="form-group">
+            <label for="txtEmail" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" value={{Email}} disabled id="txtEmail" placeholder="steve.jobs@apple.com">
+            </div>
+          </div>
+            <div class="form-group">
+            <label for="txtPassword" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control"  id="txtPassword" placeholder="Password">
+            </div>
+          </div>
+          <div class="form-group">
+              <label for="txtConfirmPWD" class="col-sm-2 control-label">Confirm Password</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control"  id="txtConfirmPWD" placeholder="Password">
+              </div>
+            </div>                     
+          <div  class="form-group">
+            <div  align="center"class="col-sm-offset-2 col-sm-5">
+              <button id="asbtnRegister" type="submit" class="btn btn-primary btn-lg btn-block login-button">
+                <span class="glyphicon glyphicon-plus"></span>
+                Đổi mật khẩu
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+            <br/>
+            <br/>
+            <br/>
+
+
+    <div class="row">
+
+      <div class="col-sm-12 col-md-12">
+        <form  ">
+          <div align="center">
+              <h1>Thông Tin Người Dùng</h1>
+            </div>
+            <br/>
+            <br/>
+            <br/>
+          <div class="form-group">
+            <label for="txtName" class="col-sm-2 control-label">Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" value="{{Hoten}}" id="txtName" >
+            </div>
+          </div>          
+          <div class="form-group">
+            <label for="txtPhone" class="col-sm-2 control-label">Phone Number</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" value="{{SDT}}"  id="txtPhone" >
+            </div>
+          </div> 
+          <div class="form-group">
+            <label for="txtaddress" class="col-sm-2 control-label">Address</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" value="{{Diachi}}" id="txtaddress" >
+            </div>
+          </div>            
+          <div  class="form-group">
+            <div  align="center"class="col-sm-offset-2 col-sm-5">
+              <button id="dabtnRegister" type="submit" class="btn btn-primary btn-lg btn-block login-button">
+                <span class="glyphicon glyphicon-plus"></span>
+                Sửa
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </script>
