--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -81,17 +81,17 @@
         <div id="tagbar3" class="w3-row">
             <div class="w3-col m2 l2 w3-indigo w3-hover-blue">
                 <div class="w3-bar w3-row w3-left w3-right">
-                    <a id="" href="#" class="w3-bar-item w3-hover-blue w3-button  w3-padding"><b>ĐANG ĐẤU GIÁ</b>
+                    <a href="http://localhost:8080" class="w3-bar-item w3-hover-blue w3-button  w3-padding"><b>ĐANG ĐẤU GIÁ</b>
                     </a>
                 </div>
             </div>
             <div class="w3-col m10 l10 w3-indigo">
                 <div class="w3-bar w3-row w3-left">
-                    <a id="nhieunhat" href="#" class="w3-bar-item w3-button w3-padding w3-hover-blue"><b>XU HƯỚNG</b>
+                    <a id="nhieunhat"  class="w3-bar-item w3-button w3-padding w3-hover-blue"><b>XU HƯỚNG</b>
                     </a>
-                    <a id="caonhat" href="#" class="w3-bar-item w3-button w3-padding w3-hover-blue w3-hide-small"><b>ĐANG HOT</b>
+                    <a id="caonhat"  class="w3-bar-item w3-button w3-padding w3-hover-blue w3-hide-small"><b>ĐANG HOT</b>
                     </a>
-                    <a id="ketthuc" href="#" class="w3-bar-item w3-button w3-padding w3-hover-blue w3-hide-small"><b>SẮP KẾT THÚC</b>
+                    <a id="ketthuc"  class="w3-bar-item w3-button w3-padding w3-hover-blue w3-hide-small"><b>SẮP KẾT THÚC</b>
                     </a>
                 </div>
             </div>
@@ -156,7 +156,7 @@
 
             </div>
 
-            <div id="tagbar-danhmuc2" class="w3-col w3-left w3-boder w3-round" style="margin-right:20px;width:21%">
+<!--             <div id="tagbar-danhmuc2" class="w3-col w3-left w3-boder w3-round" style="margin-right:20px;width:21%">
                 <div class="w3-col w3-tiny w3-light-grey w3-border">
                     <h6 class="w3-left" style="margin:5px"><b>Quản Lý Sản Phẩm</b></h6>
                 </div>
@@ -167,7 +167,7 @@
                     <a id="damua" href="#" class="w3-left" style="margin:5px">Sản Phẩm Đã Có Người Mua</a>
                 </div>
 
-            </div>
+            </div> -->
 
 
             <div id="hienthisp" class="w3-col w3-right w3-border w3-round" style="margin-left:20px;width:75%">
