--- a/DoAnWeb2/client_src/index.html
+++ b/DoAnWeb2/client_src/index.html
@@ -71,8 +71,8 @@
                     <div class="w3-col m7 l7 w3-left w3-border">
                         <input id="search" class="w3-input w3-right w3-border w3-small" type="text" placeholder="Thử tìm với Tên, Giá, Loại hay Nhà sản xuất">
                     </div>
-                    <button id="btnSearch" type="submit" class="w3-padding w3-button w3-indigo w3-hover-red w3-left"><i class="fa fa-search"></i>
-                    </button>
+                    <a id="btnSearch" class="w3-padding w3-button w3-indigo w3-hover-red w3-left"><i class="fa fa-search"></i>
+                    </a>
                 </form>
             </div>
         </div>
