--- a/DoAnWeb2/client_src/thongtinuser.html
+++ b/DoAnWeb2/client_src/thongtinuser.html
@@ -101,7 +101,12 @@
             
 </script>
 <script id="thongtinnguoidung1" type="text/x-handlebars-template">
-
+          <div class="form-group">
+            <label for="txtDiem" class="col-sm-2 control-label">Điểm Của Bạn</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" value="{{Diemdanhgia}}" disabled id="txtDiem" >
+            </div>
+          </div> 
           <div class="form-group">
             <label for="txtName" class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
